; ModuleID = '/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa.c_kuhl_m_sekurlsa_genericEncLsaIsoOutput.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimikatz/modules/sekurlsa/extr_kuhl_m_sekurlsa.c_kuhl_m_sekurlsa_genericEncLsaIsoOutput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [19 x i32] [i32 10, i32 9, i32 32, i32 32, i32 32, i32 42, i32 32, i32 117, i32 110, i32 107, i32 68, i32 97, i32 116, i32 97, i32 49, i32 32, i32 58, i32 32, i32 0], align 4
@.str.1 = private unnamed_addr constant [19 x i32] [i32 10, i32 9, i32 32, i32 32, i32 32, i32 32, i32 32, i32 117, i32 110, i32 107, i32 68, i32 97, i32 116, i32 97, i32 50, i32 32, i32 58, i32 32, i32 0], align 4
@.str.2 = private unnamed_addr constant [19 x i32] [i32 10, i32 9, i32 32, i32 32, i32 32, i32 32, i32 32, i32 69, i32 110, i32 99, i32 114, i32 121, i32 112, i32 116, i32 101, i32 100, i32 58, i32 32, i32 0], align 4
@ENC_LSAISO_DATA_BLOB = common dso_local global i32 0, align 4
@data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kuhl_m_sekurlsa_genericEncLsaIsoOutput(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = call i32 @kprintf(i8* bitcast ([19 x i32]* @.str to i8*))
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @kull_m_string_wprintf_hex(i32 %9, i32 4, i32 0)
  %11 = call i32 @kprintf(i8* bitcast ([19 x i32]* @.str.1 to i8*))
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @kull_m_string_wprintf_hex(i32 %14, i32 4, i32 0)
  %16 = call i32 @kprintf(i8* bitcast ([19 x i32]* @.str.2 to i8*))
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @ENC_LSAISO_DATA_BLOB, align 4
  %22 = load i32, i32* @data, align 4
  %23 = call i32 @FIELD_OFFSET(i32 %21, i32 %22)
  %24 = sub nsw i32 %20, %23
  %25 = call i32 @kull_m_string_wprintf_hex(i32 %19, i32 %24, i32 0)
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @kprintf(i8*) #1

declare dso_local i32 @kull_m_string_wprintf_hex(i32, i32, i32) #1

declare dso_local i32 @FIELD_OFFSET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
